--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Tarekrahman5500/Javascprit#readme",
   "dependencies": {
-    "alert-node": "^3.0.11"
+    "alert-node": "^3.0.11",
+    "prompt": "^1.0.0"
   }
 }
