--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Tarekrahman5500/Javascprit#readme",
   "dependencies": {
     "alert-node": "^3.0.11",
+    "curry": "^1.2.0",
     "fetch": "^1.1.0",
     "node-fetch": "^2.6.0",
     "prompt": "^1.0.0",
